src/test/ui/lifetime-errors/ex1-return-one-existing-name-if-else.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/ex1-return-one-existing-name-if-else.rs:12:27
   |
LL | fn foo<'a>(x: &'a i32, y: &i32) -> &'a i32 {
   |                        - consider changing the type of `y` to `&'a i32`
LL |     if x > y { x } else { y } //~ ERROR explicit lifetime
   |                           ^ lifetime `'a` required

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0621"
